# merged_order_book_streamer

./: Cargo.toml  README  build.rs
proto/: order_book_agregator.proto
resources/: exchanges.toml  symbols.txt
src/: configure_symbols.rs  lib.rs  orderbook.rs  pull_symbols.rs  stream_data.rs  stream_market_data.rs
