[package]
name = "rock_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
tonic = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5"
log = "0.4"
env_logger = "0.8"

[lib]
name = "rock"
path = "src/lib.rs"

[[bin]]
name="pull_symbols"
path="src/pull_symbols.rs"

[[bin]]
name="stream_data"
path="src/stream_data.rs"
